--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -185,6 +185,7 @@
             android:text="*The delivery fee will be set upon confirmation of order."
             android:textStyle="italic"
             android:gravity="center"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="@+id/cardViewList"
             app:layout_constraintBottom_toTopOf="@+id/cardViewCart"/>
 
@@ -204,7 +205,6 @@
             android:layout_height="0dp"
             android:textSize="12sp"
             android:text="Delivery Fee"
-            android:textStyle="bold"
             android:gravity="center"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="@+id/cardViewList"
@@ -251,7 +251,6 @@
             textViewPurchaseTotal,
             textViewTotalLabel,
             cardViewCart,
-            textViewNote,
             cardViewList"/>
 
         <com.google.android.material.textview.MaterialTextView
