--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -207,7 +207,7 @@
             android:id="@+id/groupCart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:visibility="gone"
             app:constraint_referenced_ids="fabBasket,textViewOrderBadge"/>
 
         <RelativeLayout
